# document_extractor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
app/api/: routes.py
app/core/: container.py  enums.py
app/db/: database.py  models.py  repository.py
app/schemas/: schemas.py
app/services/: extraction_service.py  file_service.py  llm_service.py  ocr_service.py
app/templates/: __init__.py  document_templates.py
app/utils/: exceptions.py  logging.py
config/: settings.py
migrations/: 001_initial.py
tests/: test_all.py
